MVVM.05 A ViewModel és Model kapcsolat

--- a/03-03-02-mvvm-stackpanel-binding/ProjectWPFSquare/ProjectWPFSquare.csproj
+++ b/03-03-02-mvvm-stackpanel-binding/ProjectWPFSquare/ProjectWPFSquare.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\oop\02-02-exception-debug.csproj" />
+  </ItemGroup>
+
 </Project>
